# django-YummyEmailOrUsernameInsensitiveAuth

./: .mergify.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  manage.py  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  release.yml  test.yml
eouia/: apps.py  backends.py  tests.py
eouimb/: apps.py  backends.py  tests.py
eoumb/: apps.py
test_eouia/: settings.py  urls.py  wsgi.py
test_eouimb/: settings.py  urls.py  wsgi.py
test_eoumb/: settings.py  urls.py  wsgi.py
test_yeouia/: __init__.py  settings.py  urls.py  wsgi.py
yeouia/: apps.py  backends.py  tests.py
