[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Yummy Email Or Username Insensitive Auth model backend for Django"
homepage = "https://github.com/nim65s/django-YummyEmailOrUsernameInsensitiveAuth"
license = "BSD-2-Clause"
name = "yeouia"
readme = "README.md"
repository = "https://github.com/nim65s/django-YummyEmailOrUsernameInsensitiveAuth.git"
version = "4.0.0"

[tool.poetry.dependencies]
Django = ">=5.1.1"
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.6.1"}
django-stubs = "^5.0.4"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
ruff = "^0.1.14"

[tool.ruff]
extend-exclude = ["migrations"]
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = [" "]
extend-ignore = ["COM812", "D203", "D213", "RUF012"]
extend-select = ["A", "B", "C", "COM", "D", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
